# bbqudit

./: .gitignore  LICENSE  README.md  profile_results.txt  pyproject.toml  todo.txt
bbq/: __init__.py  bbq.py  bbq_code.py  benchtimo.py  bp_experiments.ipynb  circuit.py  decoder.py  experiments-backup.ipynb  experiments.ipynb  field.py  last_chance.ipynb  last_one_i_swear.ipynb  niall_hpc.ipynb  parameters.py  polynomial.py  qudit_code.py  results.ipynb  results.txt  results_23-05-2025_16-19.json  simulation.py  utils.py
bbq/examples/: gross-code.ipynb  gross_code.ipynb  other-codes.ipynb  toric-code.ipynb  toric_code.ipynb
bbq/notebooks/: bp_experiments.ipynb  distance-search.ipynb  distance_search.ipynb  last_chance.ipynb  last_one_i_swear.ipynb  niall_hpc.ipynb  optimisation.ipynb  output.pstats  plots_and_data_saves.ipynb  profiler.py  results.ipynb  simulation.ipynb
bbq/notebooks/circuit_level/: bravyi_code.py  bravyi_comparison.ipynb  circuit_level_construction.ipynb  deco  deco_tog  final_circuit_level.ipynb  old_circuit_level.ipynb  ultimate.ipynb  ultimate_comparison.ipynb
bbq/scripts/: 3x3_toric.json  5x5_toric.json  7x7_toric.json  circuit_level.py  code_capacity.py  plot.py  testing.json
bbq/tests/: test_decoder.py
examples/: gross-code.ipynb  other-codes.ipynb
notebooks/: hpc_runs.ipynb  last_chance.ipynb  last_one_i_swear.ipynb  results.ipynb
qudit-bb/: __init__.py  bbq.py  experiments.ipynb  polynomial.py  qbb.py  utils.py
qudit-bb/examples/: gross-code.ipynb  toric-code.ipynb
scripts/: profiler.py
tests/: test_decoder.py
