[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qudit-codes"
version = "0.0.0"
description="""Generalisation of quantum error correction codes to qudits."""
license = "MIT"
authors = [
    { name = "Eleanor F. Kneip", email = "eleanor.kneip.24@ucl.ac.uk" },
]
dependencies = [
    "galois",
    "matplotlib",
    "numpy", 
    "scipy",
    "sympy",
]

[project.urls]

[project.scripts]

[tool.hatch.build.targets.wheel]
packages = ["bbq"]