[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bbqudit"
version = "0.0.1"
description="""Generalisation of bivariate bicycle codes to qudits."""
license = "MIT"
authors = [
    { name = "Eleanor F. Kneip", email = "eleanor.kneip.24@ucl.ac.uk" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "egcd>=2.0.2",
    "galois",
    "matplotlib",
    "numpy",
    "scipy",
    "sympy",
]

[project.urls]
Homepage = "https://github.com/e-kneip/qudit-bivariate-bicycle"

[project.scripts]

[tool.hatch.build.targets.wheel]
packages = ["bbq"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
